# python-serializable-dataclass

./: .flake8  Pipfile  README.md  publish.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pythonpackage.yaml
lib/dataclasses/: __init__.py  consts.py  entry.py  json.py  json_serializer.py  serializable_dataclass.py  type_system.py
serializable_dataclass/: __init__.py
serializable_dataclass/dataclasses/: __init__.py  consts.py  errors.py  registry.py  type_system.py
tests/: serializable_dataclass.py  serializable_dataclass_json_serializer.py  test_registry.py  test_serializable_dataclass_json_deserializer.py  test_serializable_dataclass_json_serializer.py  test_serializable_dataclass_parameters.py
