[metadata]
name = python-serializable-dataclass
version = 0.1.0
author = Jason Chen
author_email = jiahuic@twitter.com
description = This library provides a simple API for encoding and decoding dataclasses to and from a serializable types such as JSON.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tinyHui/python-serializable-dataclass
project_urls =
    Bug Tracker = https://github.com/tinyHui/python-serializable-dataclass/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent

[options]
python_requires = >=3.8